login with firebase auth

--- a/src/app/people/person/person.component.html
+++ b/src/app/people/person/person.component.html
@@ -2,7 +2,7 @@
   <ul>
     <li>
       <a [routerLink]="['/people', index]"
-         [queryParams]="{editMode: false}">
+         [queryParams]="{editMode: true}">
         {{ person.name }} {{ person.lastName }}
       </a>
     </li>
